force-app/main/default/objects/detalleTicket__c/detalleTicket__c.object-meta.xml
<CustomObject>
    <description>guardara el detalle de cada ticket.</description>
    <label>detalleTickets</label>
    <nameField>
        <displayFormat>INC-{0000}</displayFormat>
        <label>detalleTicket Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>detalleTickets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>