force-app/main/default/objects/detalleTicket__c/fields/fechaFinal__c.field-meta.xml
<CustomField>
    <fullName>fechaFinal__c</fullName>
    <label>fechaFinal</label>
    <type>Date</type>
</CustomField>