force-app/main/default/objects/detalleTicket__c/fields/fechainicial__c.field-meta.xml
<CustomField>
    <fullName>fechainicial__c</fullName>
    <label>fechainicial</label>
    <type>Date</type>
</CustomField>