force-app/main/default/objects/detalleTicket__c/fields/id_tickets__c.field-meta.xml
<CustomField>
    <fullName>id_tickets__c</fullName>
    <description>relacion del ticket</description>
    <label>Tickets</label>
    <referenceTo>Tickets__c</referenceTo>
    <relationshipLabel>detalleTickets</relationshipLabel>
    <relationshipName>detalleTickets</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>