force-app/main/default/objects/detalleTicket__c/fields/txtNumeroDias__c.field-meta.xml
<CustomField>
    <fullName>txtNumeroDias__c</fullName>
    <label>txtNumeroDias</label>
    <length>5</length>
    <type>Text</type>
</CustomField>